add-hero-setion

--- a/index.html
+++ b/index.html
@@ -6,5 +6,29 @@
     <title>Assignment-1</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero-contain text-center">
+          <img src="assets/Group.png" alt="image" />
+          <h1 class="section-title">
+            "In the near future, I hope to become a Developer."
+          </h1>
+          <p class="section-sub-title">
+            I'm a Web Developer with a passion for creating websites that not
+            only look good but also solve real problems. When I'm not sketching
+            ideas on paper, you can find me binge-watching a Netflix series or
+            playing video games (My Favorite Game Is Dota 2). My design
+            philosophy is simple: make it visually appealing, and functional,
+            and bring a smile to people's faces
+          </p>
+          <a href="#contact"><button class="btn">Contact With me</button></a>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
