Why-Web-Development section-added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,58 @@
           <a href="#contact"><button class="btn">Contact With me</button></a>
         </div>
       </section>
+      <section class="Web-Dev">
+        <div class="web-container">
+          <div class="text-container text-center">
+            <h1 class="section-title">Why Web Development??</h1>
+            <p class="section-sub-title">
+              Web developers provide businesses with the unique, engaging
+              websites they need to connect with customers
+            </p>
+          </div>
+
+          <div class="contain-container">
+            <div class="text">
+              <h1 class="contain-title">
+                I will Do Coding and Change The World
+              </h1>
+              <p class="contain-sub-title">
+                If you have an idea that could make your daily life simpler, you
+                could probably build it once you’ve learnt how to code.
+              </p>
+              <button>Learn More</button>
+            </div>
+            <img src="./assets/Layer_1.png" alt="image" />
+          </div>
+          <div class="contain-container">
+            <img src="./assets/Group 3.png" alt="image" />
+
+            <div class="text">
+              <h1 class="contain-title">
+                I will help People by creating Modern Web System
+              </h1>
+              <p class="contain-sub-title">
+                Modern web application architecture is crucial when developing
+                high-performing and scalable solutions
+              </p>
+              <button>Learn More</button>
+            </div>
+          </div>
+          <div class="contain-container">
+            <div class="text">
+              <h1 class="contain-title">
+                I will Do Coding and Change The World
+              </h1>
+              <p class="contain-sub-title">
+                If you have an idea that could make your daily life simpler, you
+                could probably build it once you’ve learnt how to code.
+              </p>
+              <button>Learn More</button>
+            </div>
+            <img src="assets/Group 4.png" alt="image" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
