embed a vido form youtube

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#contact"><button class="btn">Contact With me</button></a>
         </div>
       </section>
-      <section class="Web-Dev">
+      <section class="Web-Dev section-center">
         <div class="web-container">
           <div class="text-container text-center">
             <h1 class="section-title">Why Web Development??</h1>
@@ -78,6 +78,34 @@
             </div>
             <img src="assets/Group 4.png" alt="image" />
           </div>
+        </div>
+      </section>
+
+      <section class="inspiration section-center">
+        <div class="text-center text-container">
+          <h1 class="section-title">My Inspiration</h1>
+          <p class="section-sub-title">
+            Inspiration is a feeling of enthusiasm you get from someone or
+            something, which gives you new and creative ideas.
+          </p>
+        </div>
+        <iframe
+          class="video"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/S-gIFz-uYNw?si=za2ONJrklyUbBVqp"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <section class="targets section-center">
+        <div class="text-container text-center">
+          <h1 class="section-title">My Current Target</h1>
+          <p class="section-sub-title">My Curren Targets are given blew.</p>
         </div>
       </section>
     </main>
