added the target-section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,37 @@
           <h1 class="section-title">My Current Target</h1>
           <p class="section-sub-title">My Curren Targets are given blew.</p>
         </div>
+        <div class="skills">
+          <div class="skill html">
+            <img src="/assets/html.png" alt="html" />
+            <h1 class="skill-title">HTML</h1>
+            <p class="skill-description">
+              HyperText Markup Language (HTML) is the standard markup language
+              for documents designed to be displayed in a web browser.
+            </p>
+            <p class="learn-more">Learn More</p>
+          </div>
+          <div class="skill css">
+            <img src="assets/css.png" alt="css" />
+            <h1 class="skill-title">CSS</h1>
+            <p class="skill-description">
+              Cascading Style Sheets (CSS) is a style sheet language used for
+              specifying the presentation and styling of a document written in a
+              markup language such as HTML.
+            </p>
+            <p class="learn-more">Learn More</p>
+          </div>
+          <div class="skill js">
+            <img src="assets/js.png" alt="js" />
+            <h1 class="skill-title">JavaScript</h1>
+            <p class="skill-description">
+              JavaScript, often abbreviated as JS, is a programming language and
+              core technology of the Web, alongside HTML and CSS. 99% of
+              websites use JavaScript on the client side for webpage behavior.v
+            </p>
+            <p class="learn-more">Learn More</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
