added the footer section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,43 @@
           </div>
         </div>
       </section>
+
+      <section id="contact" class="support section-center">
+        <div class="container">
+          <div class="text-container text-center">
+            <h1 class="section-title">I need Support</h1>
+            <p class="section-sub-title">
+              It's the fastest, easiest way we have found to speak directly to
+              your customers—and solve all kinds of problems in your business.
+            </p>
+          </div>
+          <div class="input">
+            <input
+              type="email"
+              name=""
+              id=""
+              placeholder="Suggest me any feedback for me"
+            />
+            <input type="submit" value="Submit" />
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-container">
+        <p class="footer-title">An Open Commitment by Tayef</p>
+        <div class="footer-icons">
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="/assets/facebook.png" alt="facebook" />
+          </a>
+          <a href="https://www.linkedin.com/" target="_blank">
+            <img src="assets/linkedin-icon 1.png" alt="linkedin" />
+          </a>
+          <a href="https://www.github.com/" target="_blank">
+            <img src="assets/github.png" alt="github" />
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
