--- a/index.html
+++ b/index.html
@@ -169,7 +169,12 @@
             <img src="/assets/facebook.png" alt="facebook" />
           </a>
           <a href="https://www.linkedin.com/" target="_blank">
-            <img src="/assets/linkedin-icon.png" alt="linkedin" />
+            <img
+              width="36px"
+              height="36px"
+              src="/assets/linkedin-icon.png"
+              alt="linkedin"
+            />
           </a>
           <a href="https://www.github.com/" target="_blank">
             <img src="assets/github.png" alt="github" />
