--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             />
           </a>
           <a href="https://www.github.com/" target="_blank">
-            <img src="assets/github.png" alt="github" />
+            <img src="/assets/github.png" alt="github" />
           </a>
         </div>
       </div>
