--- a/index.html
+++ b/index.html
@@ -166,18 +166,18 @@
         <p class="footer-title">An Open Commitment by Tayef</p>
         <div class="footer-icons">
           <a href="https://www.facebook.com/" target="_blank">
-            <img src="/assets/facebook.png" alt="facebook" />
+            <img src="assets/facebook.png" alt="facebook" />
           </a>
           <a href="https://www.linkedin.com/" target="_blank">
             <img
               width="36px"
               height="36px"
-              src="/assets/linkedin-icon.png"
+              src="assets/linkedin-icon.png"
               alt="linkedin"
             />
           </a>
           <a href="https://www.github.com/" target="_blank">
-            <img src="/assets/github.png" alt="github" />
+            <img src="assets/github.png" alt="github" />
           </a>
         </div>
       </div>
