--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="skills">
           <div class="skill html">
-            <img src="/assets/html.png" alt="html" />
+            <img src="assets/html.png" alt="html" />
             <h1 class="skill-title">HTML</h1>
             <p class="skill-description">
               HyperText Markup Language (HTML) is the standard markup language
